--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,41 @@
 
+<h1><%= @post.title %></h1>
+
+<h2><%= @post.content %></h2>
+
+<h2>Categories</h2>
+<ul>
+  <% @post.categories.each do |category| %>
+    <li><%= category.name %></li>
+  <%end%>  
+</ul>
+
+<h3>Comments</h3>
+<ul>
+  <% @post.comments.each do |comment| %>
+    <li><%= "#{comment.user.username} says: #{comment.content}" %></li>
+  <%end%>  
+</ul>
+
+<h3>Related Users</h3>
+  <ul>
+    <% @post.users.uniq.each do |user| %>
+      <li><%= link_to user.username, user %></li>  
+    <%end%>
+  </ul>
+
+<h4>Create A New Comment</h4>
+  <%= form_for @post.comments.build do |f| %>
+    <%= f.hidden_field :post_id %>
+    <%= f.label :content %>
+    <%= f.text_area :content %>
+    <br>
+    <h3>Existing Users</h3>
+    <%= f.collection_select :user_id, User.all, :id, :username %>
+    <br>
+    <%= f.fields_for :user, User.new do |u|%>
+      <%= u.label :username %>
+      <%= u.text_field :username %>
+    <%end%>  
+    <%= f.submit %>
+  <%end%>  
